# ForgeClaw

./: .gitignore  README.md  index.html  package-lock.json  package.json  pnpm-lock.yaml
bundle-templates/code-companion/: AGENTS.md  SOUL.md
bundle-templates/content-forge/: AGENTS.md  SOUL.md
bundle-templates/customer-whisperer/: AGENTS.md  SOUL.md
bundle-templates/health-horizon/: AGENTS.md  SOUL.md
bundle-templates/inbox-zero-sentinel/: AGENTS.md  SOUL.md
bundle-templates/learning-luminary/: AGENTS.md  SOUL.md
bundle-templates/meeting-maestro/: AGENTS.md  SOUL.md
bundle-templates/personal-cfo/: AGENTS.md  SOUL.md
bundle-templates/research-raven/: AGENTS.md  SOUL.md
bundle-templates/sales-scout/: AGENTS.md  SOUL.md
bundle-templates/xemory-keeper/: AGENTS.md  SOUL.md
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: agents.rs  bundle.rs  license.rs  mod.rs  openclaw_bin.rs  settings.rs  specs.rs  updater.rs
src/components/: AgentList.tsx  AgentSpecsPanel.tsx  CentralOrb.tsx  HUD.tsx  InstallBundle.tsx  LicenseGate.tsx  LicenseModal.tsx  OrbRipple.tsx  Settings.tsx  SoulChamber.tsx  Starfield.tsx  StatusToast.tsx  TemplatePanel.tsx  TemplateShard.tsx  UpdateChecker.tsx
src/lib/: tauri.ts  templates.ts
src/styles/: global.css
