[package]
name = "xemorysystems-agent-hub"
version = "0.1.0"
edition = "2021"
description = "XemorySystems Agent Hub – manage premium OpenClaw agent templates"

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["process", "fs", "io-util"] }
reqwest = { version = "0.12", features = ["json", "stream"] }
dirs = "6"
zip = "2"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[lib]
name = "xemorysystems_agent_hub_lib"
crate-type = ["staticlib", "cdylib", "rlib"]
